--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="col-md-3">
                     <a href="#" class="album-poster" data-switch="5">
-                    <img src="images/killua_song.jpg" alt="aot"></a>
+                    <img src="images/kila_song.jpg" alt="aot"></a>
                     <h4>HunterxHunter</h4>
                 </div>
                 <div class="col-md-3">
