--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     {
         name: 'Demon Slayer',
         artist: 'Gurenge',
-        url: 'sounds/DemonSlayer_song.mp3',
+        url: 'sounds/demonSlayer_song.mp3',
         cover: 'images/DemonSlayer_song.jpg'
     },
     {
